fully functional scrollbar with correct styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,10 @@
   border: 3px solid #222;
 }
 
+*::-webkit-scrollbar-corner {
+  background: #222;
+}
+
 html {
   background-color: #222;
   box-sizing: border-box;
@@ -359,7 +363,7 @@ pre {
   flex-direction: row;
   align-items: stretch;
   padding-left: 5px;
-  width: 120px; 
+  width: 120px;
 }
 
 .header .header-right {
@@ -699,7 +703,7 @@ pre {
 }
 
 .song-view-files {
-  height: 100%;
+  overflow-x: hidden;
 }
 
 .song-view-files .files {
@@ -712,10 +716,6 @@ pre {
   margin-top: 10px;
 }
 
-.song-view-comments {
-  height: calc(100% - 20px);
-  padding-bottom: 5px;
-}
 
 .song-view-main {
   color: #888;
@@ -725,9 +725,10 @@ pre {
 .comment-container {
   display: flex;
   align-items: center;
-  position: absolute;
+  position: sticky;
   bottom: 0;
   left: 0;
+  margin-top: 5px;
   background-color: #222;
   width: 100%;
 }
@@ -906,8 +907,12 @@ pre {
   margin-right: 5px;
 }
 
+.file td {
+  color: #eee;
+}
+
 .file .play-button-cell {
-  width: 25px;
+  min-width: 25px;
   padding-right: 4px; /*Compensate for 2px border-spacing on both sides*/
 }
 
